                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 20-02-2005 fixed: OSD crashes when filling listcontrols.
  - 20-02-2005 fixed: Noise level was not used correctly for video filters.
  - 20-02-2005 fixed: various info related things (eg music current pos could show negative times)
  - 20-02-2005 fixed: Kai avatar on toast dialog wasn't shown in correct position.
  - 20-02-2005 changed: Improved handling of resolution switching in GUI->Fullscreen video.
  - 20-02-2005 fixed: Comborenderer small window in different resolution.
  - 19-02-2005 added: System.CPUTemperature, System.GPUTemperature, and System.FanSpeed to the infoManager.
  - 19-02-2005 changed: audiobuffer sizes for smoother pal video
  - 19-02-2005 added: Option to disable thumbnail generation during picture viewing.
  - 19-02-2005 fixed: LCD: last bar of the progress is now shown
  - 19-02-2005 fixed: LCD: execution-timing for the LCD and SmartXX (sometimes the display crashs, hope it's fixed now)
  - 19-02-2005 fixed: LCD: backlight-fix for the X3-LCD (thnx to GreenGian and SniperKil for testing)
  - 19-02-2005 added: Smooth progress bar for the HD44780 (stop-symbol was not used) (thnx to GreenGian and SniperKil to make it smooth)
  - 19-02-2005 cleanup: LCD progress bar code moved to LCD class
  - 18-02-2005 fixed: <allowoverlay> doesn't work in music songs
  - 18-02-2005 fixed: Localization of UV data in weather.
  - 18-02-2005 fixed: crash bug in thumbpanels when switching from large->small without resetting current focus.
  - 18-02-2005 added: progress bar for the LCD (smooth on KS0073, on HD44780 later)
  - 18-02-2005 added: LCD option for HD44780/KS0073 controllers